# AndroidFFmpegEditor

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/hezb/ffmpeg/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/hezb/ffmpeg/: FFmpegCmd.kt  MainActivity.kt
app/src/main/jni/: CMakeLists.txt  ffmpeg_cmd.cpp
app/src/main/jni/include/libavutil/: ffversion.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/hezb/ffmpeg/: ExampleUnitTest.kt
extra/: FFmpeg编译说明.md  ffmpeg_build_android.sh  ffmpeg_build_android_gcc.sh
gradle/wrapper/: gradle-wrapper.properties
